Remaining libs renaming for consistency (sequel)
[ ] May break build
[ ] May break existing applications (see CHANGES.txt)
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[ ] Documentation

--- a/libs/seq/CMakeLists.txt
+++ b/libs/seq/CMakeLists.txt
@@ -45,7 +45,7 @@ set(SEQUEL_SOURCES
   )
   
 purple_add_library(Sequel SHARED
-  HEADERS_PREFIX "sequel/"
+  HEADERS_PREFIX "seq/"
   HEADERS ${SEQUEL_HEADERS}
   SOURCES ${SEQUEL_SOURCES} ${DETAIL_FILES}
   LINK_LIBRARIES shared Equalizer
